fixed css for index on small screen

--- a/styles/main.css
+++ b/styles/main.css
@@ -140,6 +140,10 @@ img{
       width: 100%;
       padding: 1em;
     }
+
+    #slideshow{
+      min-height: 400px;
+    }
     
     #featuredRail {
       width: 90%;
