--- a/styles/shop.css
+++ b/styles/shop.css
@@ -7,6 +7,10 @@ section{
     margin-bottom: .5em;
 }
 
+h2{
+  margin: 0;
+}
+
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
